[package]
name = "caminos-lib"
version = "0.2.0"
authors = ["Cristóbal Camarero <cristobal.camarero@unican.es>"]
edition = "2018"
description = "A modular interconnection network simulator."
publish = true
keywords = ["simulator"]
documentation = "https://docs.rs/caminos-lib"
readme = "README.md"
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gramatica = "0.1"
rand = "0.4"
getopts = "0.2"
chrono = "0.4"
ssh2 = "0.8.2"
rpassword = "5.0"
indicatif = "0.15.0"
procfs = "0.9"
lazy_static = "1.4.0" #somehow not automatically added by indicatif
quantifiable-derive = "0.1.0"
#quantifiable-derive = { path = "../quantifiable-derive" }
