[package]
name = "quantifiable-derive"
version = "0.1.0"
authors = ["Cristóbal Camarero <cristobal.camarero@unican.es>"]

[lib]
proc-macro = true

[dependencies]
#quote = "0.3"
#syn = "0.11"
#syn needs the full feature to process <dyn Trait>
#syn = {version="0.11", features=["full"]}
#syn = "1.0.16"
synstructure = "0.5"
proc-macro2 = "1.0.24"
syn = "1.0"
quote = "1.0"
